Added a new option to switch the Goals timeline view between age-based and date-based formats.
Added a 'Start' button to tasks on the 'Tasks' page, enabling quick launch of a focus session for the selected task.
Increaser now auto-selects the last task worked on for a project whenever switching to that project.
1730435467902
Users can stop tracking habits without deleting them by making them inactive.
Merge "Track" and "Stats" habit views into a single page.
User can now write a plan for when exactly they will do the habit so they are more likely to stick with it.
Hovering over the consistency displays how often the user skips that habit.
User can see session duration while editing session end time.
Added "Build habits" article to the "Info" page.
1729829282066
Users can now edit and reorder habits right from the "Track" and "Stats" views on the "Habits" page.
User can reset a specific habit from the "Edit" view of a habit.
Every "Tasks" sub-page now has an "Add" button
Users can turn an existing task into a template and templates are now always available when creating or editing tasks.
It's more comfortable to set a weekly goal for a project
Added "Time tracking" and "Taks Management" articles to the "Info" page
1729225980085
Users connect goals to their habits by either adding new habits from the goal view or picking an existing habit.
To help users remember to track their habits, a prompt appears in the sidebar navigation next to the "Habits" item. This prompt will show up if the user hasn't visited the "Habits" page that day.
Added a line to the weekly project report chart to display budgeted time for selected projects or total budgeted time for all projects.
Updated the projects page to display not only the emoji and name, but also the budget, goal, and "Mon-Fri" label for workday projects.
User can set project weekly budget and goal while creating or editing a project.