@@ -1,4 +1,5 @@
 Added a new option to switch the Goals timeline view between age-based and date-based formats.
+A more comfortable and compact form for creating and editing goals.
 Added a 'Start' button to tasks on the 'Tasks' page, enabling quick launch of a focus session for the selected task.
 Increaser now auto-selects the last task worked on for a project whenever switching to that project.
 1730435467902
